tests/build/cases/property/invalid_priority.stderr
error: expected property priority
 --> cases/property/invalid_priority.rs:3:12
  |
3 | #[property(invalid)]
  |            ^^^^^^^
